# osm

./: .aider.conf.yml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CONVENTIONS.md  Dockerfile  Dockerfile.base  README.md  compose.development.override.yaml  compose.override.yaml  compose.yaml  docker-compose.yml  draft_of_specifcation_2024-05-06.md  draft_of_specification_2024-05-06.md  environment.yaml  install_packages.R  pyproject.toml  requirements.txt  streamlit_app.py  tox.ini
.docker/: _apptainer_shell.sh  _dockerfile_initialize_user_accounts.sh  _dockerfile_setup_root_prefix.sh  _dockerfile_shell.sh
.github/workflows/: build-docker.yml  deploy-docker.yml  deploy-opentofu.yml  deploy.yml  docker-up.yml  lint.yml  release.yml  tests.yml  unit-tests.yml
.github/workflows/deprecated/: deploy.yml
commands/: file_processing.py
commands/converters/: converter.py  pdf_converter.py
commands/utils/: config.py
docker_images/rtransparent/: app.py
docker_images/web_api/: Dockerfile  compose.override.yaml  compose.yaml  main.py  requirements.txt
docs/examples/rtransparent_json_outputs/: Dafflon2024.json  Goyal2022.json  Mallard2021.json  PMID33667672_rtrans_out.json
docs/examples/sciencebeam_xml_outputs/: Dafflon et al. 2024 - Reliability and predictability of phenotype information from functional connectivity in large imaging datasets.xml  Goyal et al. 2022 - The positive-negative mode link between brain connec ... s and behaviour - a pre-registered replication of Smith et al. (2015).xml  Jangraw et al. 2023 - A highly replicable decline in mood during rest and simple tasks.xml  PMID33667672.xml
external_components/: _entrypoint.sh
external_components/chat_gpt_4o_2024_08_06/: extract.py  extract_2.py
external_components/llm_extraction/: Dockerfile  app.py  environment.yaml
external_components/rtransparent/: Dockerfile  app.py  environment.yaml
logs/: logger.py
osm/: __init__.py  _utils.py  cli.py  config.py  converters.py  db.py  rtransparent.py  schemas.py  sciencebeam.py
osm/cli/: main.py
osm/components/: oddpub.py  rtransparent.py  sciencebeam.py
osm/converters/: converter.py  pdf_converter.py  utils.py  xml_json.py
osm/pipeline/: core.py  extractors.py  parsers.py  savers.py
osm/schemas/: __init__.py  custom_fields.py  metrics_schemas.py  schema_helpers.py  schemas.py
osm/scripts/: invocation_upload.py
osm/utils/: config.py
osm_cli/cli/: file_processing.py  main.py
osm_cli/logging/: logger.py
scripts/: biomedical_research_funders.csv  compare_matches_datasets.py  deployment_diagnostics.sh  diagnose-instance-connectivity.sh  funder-line-graph_v15.py  funder-mapping-chunks.py  funder-mapping-stdin.py  funder_mapping.py  funding_sources_code_predictions_count.csv  funding_sources_code_predictions_percentage_2015_2020.csv  invocation_upload.py  merge_funder.py  pmcid-funding-left-join-indicators.py  refresh_dashboard.sh
tests/: conftest.py  test_api.py  test_file_processing.py  test_pdf_to_xml.py  test_schema_helpers.py  test_schema_integrity.py  test_schemas.py  test_style.py  utils.py
tests/scripts/: test_invocation_upload.py
web/: .env.template
web/api/: Dockerfile  main.py
web/dashboard/: Dockerfile  app.py  dashboard.py  main_dashboard.py  streamlit_app.py  ui.py
web/deploy/: .env.versions  README.md  compose.yaml  deploy.py  docker-compose.yaml  environment.yaml
web/deploy/deprecated/: README.md  (+1 more)
web/js_dashboard/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json
web/js_dashboard_backend/: Dockerfile  main.py
web_api/: .env.template  Dockerfile  compose.yaml  deploy.py  deploy.sh  docker-compose-traefik.yaml.j2  docker-compose.yaml.j2  main.py
web_api/dashboard/: Dockerfile  dashboard.py
web_api/terraform/: backend-config.tf  main.tf  production.tfvars  staging.tfvars  variables.tf
web_api/traefik/: traefik.toml
xmls_sciencebeam/: Mallard et al. 2021 - X-chromosome influences on neuroanatomical variation in humans.xml
(+100 files in other folders)
