[project]
name = "osm"
description = "Open Science Metrics (OSM) client for tracking scientific transparency and reproducibility metrics"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "open science",
  "altmetrics",
  "scientific transparency",
  "reproducibility"
]
dynamic = ["version"]
dependencies = [
  "dill",
  "pandas",
  "pyarrow",
  "pydantic",
  "pydantic[email]",
  "python_on_whales",
  "odmantic",
  "requests",
]

[project.urls]
homepage = "https://website"
source = "https://github.com/nimh-dsst/osm"
issues = "https://github.com/nimh-dsst/osm/issues"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "osm/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
osm = "osm.cli:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.ruff]
line-length = 88
indent-width = 4
