[project]
name = "osm"
description = "Open Science Metrics (OSM) client for tracking scientific transparency and reproducibility metrics"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "open science",
  "altmetrics",
  "scientific transparency",
  "reproducibility"
]

dynamic = ["version"]
dependencies = [
  "dill",
  "pandas",
  "pyarrow",
  "pydantic",
  "pydantic[email]",
  "python_on_whales",
  "requests",
  "pytest-asyncio>=0.24.0",
  "asgi-lifespan>=2.1.0",
  "mongoengine>=0.29.0",
  "mongomock>=4.1.2",
  "setuptools>=74.1.2",
  "mongomock-motor>=0.0.31",
  "motor>=3.6.0",
  "mypy>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "pdbpp",
  "ipython",
  "ruff",
  "pytest",
]
server = [
  "fastapi[standard]",
  "uvicorn",
  "gunicorn",
]
llm = [
  "llama-index",
  "llama-index-llms-openai",
  "llama-index-program-openai",
  "llama-index-llms-openrouter"
]
plot = [
  "colorcet",
  "panel",
]
[project.urls]
homepage = "https://website"
source = "https://github.com/nimh-dsst/osm"
issues = "https://github.com/nimh-dsst/osm/issues"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "osm/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
osm = "osm.cli:main"

[tool.ruff]
line-length = 88
indent-width = 4

  [tool.pytest.ini_options]
  asyncio_mode = "auto"
  markers = [
      "asyncio: mark test as async",
  ]
