[project]
name = "osm"
description = "Open Science Metrics (OSM) client for tracking scientific transparency and reproducibility metrics"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "open science",
  "altmetrics",
  "scientific transparency",
  "reproducibility"
]

dynamic = ["version"]
dependencies = [
  "dill",
  "pandas",
  "pyarrow",
  "pydantic",
  "pydantic[email]",
  "python_on_whales",
  "odmantic",
  "requests",
  "polars",
  "pycountry",
]

[project.optional-dependencies]
dev = [
  "pdbpp",
  "ipython",
  "ruff",
  "pytest",
  "tox",
]
server = [
  "fastapi[standard]",
  "uvicorn",
  "gunicorn",
]
llm = [
  "llama-index",
  "llama-index-llms-openai",
  "llama-index-program-openai",
  "llama-index-llms-openrouter"
]
plot = [
  "colorcet",
  "panel",
  "plotly",
  "streamlit"
]
[project.urls]
homepage = "https://website"
source = "https://github.com/nimh-dsst/osm"
issues = "https://github.com/nimh-dsst/osm/issues"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "osm/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
osm = "osm.cli:main"

[tool.ruff]
line-length = 88
indent-width = 4

[dependency-groups]
plot = [
    "colorcet>=3.1.0",
    "panel>=1.7.1",
    "plotly>=6.2.0",
    "streamlit>=1.47.1",
]
dev = [
    "pre-commit>=4.2.0",
]
